# wikidump-process

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: invalid-dump.json  invalid-dump.json.bz2  invalid-json.json  invalid-json.json.bz2  simple.json  simple.json.bz2  test-data.json  test-data.json.bz2
